@@ -26,6 +26,7 @@ version 0.9.2 - Not released, available at https://simupop.svn.sourceforge.net/s
   - NEW: Add pause operator to accept specified keys.
   - CHG: Remove rarely used parameters preStmts and postStmts from operators pyEval and
 		pyExec.
+  - CHG: Remove operator infoEval and polish operator infoExec. Document infoExec.
 		
 
 version 0.9.1 - (Rev 2330) Jan 13, 2009
